fixed z-index on Nav

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ nav {
 	background-color: var(--nav-background);
 	color: white;
 	box-shadow: 0px 0px 5px black;
+	z-index: 10;
 }
 
 h3, h4 {
